14 December 2025 v644: Admin > Humans: Fixed: Links to email address was not visible when hovering over a row You can now click on the article count for each human to see the articles they have added. Added User_id search option. This is only visible if triggered via user_id parameter in url

--- a/main.css
+++ b/main.css
@@ -1351,9 +1351,14 @@ h3, .pageSubTitleFont {
 .buttonPopupMenu > a:hover,
 .navItem:hover,
 .dataTable tbody tr:hover,
+.dataTable tr:hover a,
 .optionCheckImage:hover {
   color: var(--color-hover);
   background-color: var(--hover-bgcolor);
+}
+
+.dataTable tr:hover a {
+  text-decoration: underline;
 }
 
 .itemSelected, .trSelected td, .trSelected a {
